# SavorSound

./: LICENSE  README.rst  dev.sh  mopidy.conf  pyproject.toml
.clinic/81251.clinic-doctor/: 81251.clinic-doctor-systeminfo  81251.clinic-doctor-traceevent
.clinic/81273.clinic-doctor/: 81273.clinic-doctor-systeminfo  81273.clinic-doctor-traceevent
.clinic/81542.clinic-doctor/: 81542.clinic-doctor-systeminfo  81542.clinic-doctor-traceevent
.clinic/81676.clinic-doctor/: 81676.clinic-doctor-systeminfo  81676.clinic-doctor-traceevent
Iris/: package-lock.json  package.json
Iris/.clinic/: 89141.clinic-flame.html  90270.clinic-flame.html
Iris/.clinic/81698.clinic-doctor/: 81698.clinic-doctor-systeminfo  81698.clinic-doctor-traceevent
Iris/.clinic/88210.clinic-doctor/: 88210.clinic-doctor-systeminfo  88210.clinic-doctor-traceevent
Iris/.clinic/89141.clinic-flame/: 89141.clinic-flame-samples  89141.clinic-flame-systeminfo
Iris/.clinic/89783.clinic-doctor/: 89783.clinic-doctor-systeminfo  89783.clinic-doctor-traceevent
Iris/.clinic/90270.clinic-flame/: 90270.clinic-flame-samples
Iris/.github/: FUNDING.yml
Iris/src/: index.html
Iris/src/js/locale/: en.yaml  it.yaml
Iris/src/js/services/ui/: middleware.js
Iris/src/js/views/: Settings.js
Iris/src/scss/: app.scss
Iris/src/scss/components/: _context-menu.scss  _icon.scss  _lists.scss  _playback-controls.scss  _related-artists.scss  _sidebar.scss  _slider.scss
Iris/src/scss/global/: _colours.scss  _forms.scss
Iris/src/scss/views/: _modal.scss  _search.scss  _settings.scss
(+2 files in other folders)
